Use range based for loops in bookmark_app_helper.cc

This is a small code clean up to use ranged based for loops instead of
manual iterator logic. This reduces the line wrapping and makes
the type of the iterated values more obvious in some cases.

Bug: 809816
Change-Id: I4f6e856a4dcd052d3d7ec5befd5792b9c1f09602
Reviewed-on: https://chromium-review.googlesource.com/1058987
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558641}
Former-commit-id: ddace756be8170a976bdf1b6c8779dfe2d5c47b6